--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format:fix": "prettier . --write",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "vitest"
+    "test": "vitest --coverage"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.4",
+    "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -37,6 +38,7 @@
     "husky": "^8.0.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^12.4.1",
+    "msw": "^2.0.3",
     "prettier": "^2.6.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.8",
