--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format:fix": "prettier . --write",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "vitest --coverage"
+    "test": "vitest",
+    "coverage": "vitest run --coverage.enabled --coverage.all"
   },
   "dependencies": {
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0"
