--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
-    "format:fix": "prettier . --write",
+    "fix": "prettier . --write",
     "preview": "vite preview",
     "prepare": "husky install",
     "test": "vitest",
